# toolkitx

./: .gitignore  .readthedocs.yaml  README.md  debug_block.py  debug_block_2.py  debug_md.py  debug_tbody.py  makefile  mkdocs.yml  pyproject.toml  reproduce_table_issue_isolated.py  test_bs4_append.py  test_table.py  verify_fix.py  verify_fix2.py  verify_fix3.py
.github/workflows/: python-publish.yml
docs/: index.md
docs/superpowers/plans/: 2026-05-30-auto-docs.md  2026-05-30-configure-mkdocs.md  2026-05-30-html-to-markdown.md  2026-05-30-rich-docs.md  2026-05-30-rtd-deployment.md  2026-05-30-upgrade-deps-ruff.md  2026-05-31-enrich-text-utils-doctests.md  2026-05-31-fix-table-expansion.md
docs/superpowers/specs/: 2026-05-30-auto-docs-design.md  2026-05-30-docstring-completion-design.md  2026-05-30-html-to-markdown-design.md  2026-05-30-rich-docs-design.md  2026-05-30-rtd-prep-design.md
scripts/: gen_ref_pages.py
tests/: test_html_utils.py  test_task_utils.py  test_text_utils.py
tests/lab/: test_translator.py
toolkitx/: __init__.py  html_utils.py  task_utils.py  text_utils.py
toolkitx/lab/: __init__.py  translator.py
