[project]
name = "toolkitx"
version = "0.0.4"
description = "A personal Python toolkit for common tasks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diskcache>=5.6.3",
    "httpx>=0.28.1",
    "polars>=1.38.1",
    "pydantic>=2.12.5",
    "tencentcloud-sdk-python>=3.1.50",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-dotenv>=0.5.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["toolkitx"]

[project.urls]
"Homepage" = "https://github.com/ider-zh/toolkitx"
"Bug Tracker" = "https://github.com/ider-zh/toolkitx/issues"