[project]
name = "toolkitx"
version = "0.0.4"
description = "A personal Python toolkit for common tasks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diskcache>=5.6.3",
    "httpx>=0.28.1",
    "polars>=1.38.1",
    "pydantic>=2.12.5",
    "tencentcloud-sdk-python>=3.1.50",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-dotenv>=0.5.2",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["toolkitx"]

[tool.ruff]
# Target Python version
target-version = "py312"
line-length = 88

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Also enable isort (`I`) and some others.
select = ["E4", "E7", "E9", "F", "I", "N", "B", "UP", "PL"]
ignore = [
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments
    "PLR0915", # Too many statements
    "E701",    # Multiple statements on one line (colon)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "PLC0415", "N806", "F841"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[project.urls]
"Homepage" = "https://github.com/ider-zh/toolkitx"
"Bug Tracker" = "https://github.com/ider-zh/toolkitx/issues"